--- a/style.css
+++ b/style.css
@@ -50,10 +50,9 @@ body {
   
   .image-text {
     text-align: center;
-    background-color: whitesmoke;
-    color: black;
-    font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
+    color: whitesmoke;
+    font-size: 50px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
   
   .introduction {
@@ -70,8 +69,17 @@ body {
   }
 
   .service1 img{
-      width: 50px;
+      width: 400px;
+      border-radius: 50%;
+      box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.2);
+      height: 400px;
   }
+
+  .service1 img:hover{
+       cursor: pointer;
+       margin-left: 10px;
+
+   }
   
   .service1 p {
     padding: 0px 16px;
