--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   }
   
   .introduction {
-    color: gray;
+    color: black;
     font-size: 1.5rem;
     text-align: center;
     padding-top: 50px;
@@ -83,6 +83,8 @@ body {
   
   .service1 p {
     padding: 0px 16px;
+    font-size: 1.5rem;
+    color: gray;
   }
   
   @media screen and (min-width: 700px) {
