making grid columns responsive on mobile view

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
     padding-top: 50px;
     padding-bottom: 50px;
   }
+ 
   
   .service1 {
     text-align: center;
@@ -146,7 +147,7 @@ input{
 
 .services{
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
 }
 
 .contact{
@@ -166,7 +167,11 @@ input{
       border-left: 1px solid black;
       text-align: left;
     }
-  
+    .services{
+      display: grid;
+      grid-template-columns:  1fr 1fr;
+    }
+
   }
   
   
